--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "axios": "^1.7.2",
+    "axios-cache-interceptor": "^1.5.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.14.1",
+    "react_ujs": "^3.2.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
