--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-spinners": "^0.14.1",
+    "react-loader-spinner": "^6.1.6",
     "react_ujs": "^3.2.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
