--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -31,6 +31,7 @@ default: &default
     - .ttf
     - .woff
     - .woff2
+    - .webp
 
   extensions:
     - .jsx
@@ -48,6 +49,7 @@ default: &default
     - .gif
     - .jpeg
     - .jpg
+    - .webp
 
 development:
   <<: *default
