--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-responsive-pagination": "^2.6.1",
     "react_ujs": "^3.2.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
