--- a/package.json
+++ b/package.json
@@ -1,27 +1,52 @@
 {
   "name": "poke-wiki",
-  "private": true,
+  "private": false,
+  "scripts": {
+    "test": "jest --passWithNoTests"
+  },
   "dependencies": {
     "@babel/core": "^7.24.9",
+    "@babel/eslint-parser": "^7.25.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.25.0",
     "@babel/preset-react": "^7.24.7",
+    "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.5.3",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-transform-es2015-for-of": "^6.23.0",
+    "babel-plugin-transform-import-meta": "^2.2.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^5.3.3",
+    "eslint": "^9.8.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-react": "^7.35.0",
+    "history": "^5.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-responsive-pagination": "^2.6.1",
+    "react-router-dom": "^6.25.1",
     "react_ujs": "^3.2.1",
+    "ts-jest": "^29.2.3",
     "turbolinks": "^5.2.0",
+    "typescript": "^5.5.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
@@ -29,5 +54,9 @@
   "devDependencies": {
     "webpack-bundle-analyzer": "^4.0.0",
     "webpack-dev-server": "^3"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/mauro-sanchez/poke-wiki.git",
+  "author": "Mauro Sánchez <msanchez@shibumi.cl>",
+  "license": "MIT"
 }
