--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
   "main": "index.js",
   "repository": "https://github.com/mauro-sanchez/poke-wiki.git",
   "author": "Mauro Sánchez <msanchez@shibumi.cl>",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "20.16.0"
+  }
 }
