--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "author": "Mauro Sánchez <msanchez@shibumi.cl>",
   "license": "MIT",
   "engines": {
-    "node": "20.16.0"
+    "node": "20.16.0",
+    "npm":"10.8.1"
   }
 }
