--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "license": "MIT",
   "engines": {
     "node": "20.16.0",
-    "npm":"10.8.1"
+    "npm":"10.8.1",
+    "yarn": "1.22.19"
   }
 }
