--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/eslint-parser": "^7.25.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.25.0",
     "@babel/preset-react": "^7.24.7",
@@ -61,7 +62,7 @@
   "license": "MIT",
   "engines": {
     "node": "20.9.0",
-    "npm":"10.1.0",
+    "npm": "10.1.0",
     "yarn": "1.22.19"
   }
 }
