--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "poke-wiki",
   "private": false,
+  "packageManager": "yarn@1.22.19",
   "scripts": {
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "@babel/core": "^7.24.9",
     "@babel/eslint-parser": "^7.25.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -17,7 +19,7 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.4",
+    "@rails/webpacker": "^6.0.0-rc.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
@@ -26,6 +28,8 @@
     "axios-cache-interceptor": "^1.5.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-es2015-for-of": "^6.23.0",
     "babel-plugin-transform-import-meta": "^2.2.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -48,13 +52,18 @@
     "ts-jest": "^29.2.3",
     "turbolinks": "^5.2.0",
     "typescript": "^5.5.4",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
   "version": "0.1.0",
+  "browserslist": [
+    "defaults",
+    "IE 11",
+    "last 2 Chrome versions"
+  ],
   "devDependencies": {
-    "webpack-bundle-analyzer": "^4.0.0",
-    "webpack-dev-server": "^3"
+    "@webpack-cli/serve": "^2.0.5",
+    "webpack-dev-server": "^5.0.4"
   },
   "main": "index.js",
   "repository": "https://github.com/mauro-sanchez/poke-wiki.git",
