--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
-    "@babel/core": "^7.24.9",
+    "@babel/core": "7",
     "@babel/eslint-parser": "^7.25.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "7",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-env": "7",
     "@babel/preset-react": "^7.24.7",
+    "@babel/runtime": "7",
     "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -24,16 +26,20 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/babel__core": "7",
+    "@types/webpack": "5",
     "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.5.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
+    "babel-loader": "8",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-es2015-for-of": "^6.23.0",
     "babel-plugin-transform-import-meta": "^2.2.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.3.3",
+    "compression-webpack-plugin": "9",
     "eslint": "^9.8.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-react": "^7.35.0",
@@ -49,11 +55,15 @@
     "react-responsive-pagination": "^2.6.1",
     "react-router-dom": "^6.25.1",
     "react_ujs": "^3.2.1",
+    "shakapacker": "8.0.0",
+    "terser-webpack-plugin": "5",
     "ts-jest": "^29.2.3",
     "turbolinks": "^5.2.0",
     "typescript": "^5.5.4",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack": "5",
+    "webpack-assets-manifest": "5",
+    "webpack-cli": "4",
+    "webpack-merge": "5"
   },
   "version": "0.1.0",
   "browserslist": [
@@ -63,7 +73,7 @@
   ],
   "devDependencies": {
     "@webpack-cli/serve": "^2.0.5",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "4"
   },
   "main": "index.js",
   "repository": "https://github.com/mauro-sanchez/poke-wiki.git",
@@ -73,5 +83,10 @@
     "node": "20.9.0",
     "npm": "10.1.0",
     "yarn": "1.22.19"
+  },
+  "babel": {
+    "presets": [
+      "./node_modules/shakapacker/package/babel/preset.js"
+    ]
   }
 }
